--- a/index.html
+++ b/index.html
@@ -221,11 +221,20 @@
                 <div class="chart-card">
                     <div class="chart-header">
                         <h3 class="chart-title">Complaint Trend Over Time</h3>
-                        <div class="chart-menu" ng-click="$event.stopPropagation()">
-                            <button class="menu-button" ng-click="toggleChartMenu('trend')">⋯</button>
-                            <div class="menu-dropdown" ng-class="{'show': chartMenus.trend}">
-                                <div class="menu-item" ng-click="downloadChart('trend', 'png')">Download PNG</div>
-                                <div class="menu-item" ng-click="downloadChart('trend', 'csv')">Download CSV</div>
+                        <div class="chart-actions">
+                            <button class="fullscreen-button" title="View full screen" aria-label="View full screen">
+                                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M4 9V4h5v2H6v3H4zm10-5h5v5h-2V6h-3V4zM9 20H4v-5h2v3h3v2zm11-5v5h-5v-2h3v-3h2z" fill="currentColor"/>
+                                </svg>
+                            </button>
+                            <div class="chart-menu" ng-click="$event.stopPropagation()">
+                                <button class="menu-button" ng-click="toggleChartMenu('trend')" title="More options" aria-label="More options">
+                                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 7h18M3 12h18M3 17h18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+                                </button>
+                                <div class="menu-dropdown" ng-class="{'show': chartMenus.trend}">
+                                    <div class="menu-item" ng-click="downloadChart('trend', 'png')">Download PNG</div>
+                                    <div class="menu-item" ng-click="downloadChart('trend', 'csv')">Download CSV</div>
+                                </div>
                             </div>
                         </div>
                     </div>
