--- a/sri-lanka-map.html
+++ b/sri-lanka-map.html
@@ -5,24 +5,23 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Sri Lanka Map</title>
 
-  <!-- Highcharts Map core + exporting module -->
-  <script src="https://code.highcharts.com/maps/highmaps.js"></script>
-  <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/highcharts@11.4.7/highmaps.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/highcharts@11.4.7/modules/exporting.min.js"></script>
 
   <style>
     html, body { height: 100%; margin: 0; background: transparent; }
 
-    #container { height: 420px; min-width: 310px; max-width: 800px; margin: 0 auto; overflow: hidden; background: transparent; }
-
-    .loading {
-      margin-top: 10em;
-      text-align: center;
-      color: gray;
+    #container {
+        height: 350px;
+        min-width: 310px;
+        max-width: 800px;
+        margin: 0 auto;
     }
 
-    /* Small responsive tweak */
-    @media (max-width: 420px) {
-      #container { width: 95%; margin: 1rem auto; }
+    .loading {
+        margin-top: 10em;
+        text-align: center;
+        color: gray;
     }
   </style>
 </head>
@@ -32,10 +31,10 @@
 
   <script>
     (async () => {
-      try {
-        const resp = await fetch('https://code.highcharts.com/mapdata/countries/lk/lk-all.topo.json');
-        if (!resp.ok) throw new Error('Failed to fetch topology: ' + resp.status);
-        const topology = await resp.json();
+
+        const topology = await fetch(
+            'https://cdn.jsdelivr.net/npm/@highcharts/map-collection@1.1.4/countries/lk/lk-all.topo.json'
+        ).then(response => response.json());
 
         // Prepare demo data. The data is joined to map using value of 'hc-key'
         // property by default. See API docs for 'joinBy' for more info on linking
@@ -52,33 +51,48 @@
 
         // Create the chart
         Highcharts.mapChart('container', {
-            chart: { map: topology, backgroundColor: 'transparent' },
-            title: { text: null },
+            chart: {
+                map: topology,
+                backgroundColor: 'transparent'
+            },
+
+            title: {
+                text: null
+            },
+
+            subtitle: {
+                text: null
+            },
 
             mapNavigation: {
                 enabled: true,
-                buttonOptions: { verticalAlign: 'bottom' }
+                buttonOptions: {
+                    verticalAlign: 'bottom'
+                }
             },
 
-            colorAxis: { min: 0 },
+            colorAxis: {
+                min: 0,
+                minColor: '#E5F0FF',
+                maxColor: '#007abf'
+            },
 
             series: [{
                 data: data,
-                name: 'Random data',
-                states: { hover: { color: '#BADA55' } },
-                dataLabels: { enabled: false }
+                name: 'Complaints',
+                states: {
+                    hover: {
+                        color: '#005a8f'
+                    }
+                },
+                dataLabels: {
+                    enabled: false
+                }
             }]
         });
 
-      } catch (err) {
-        const container = document.getElementById('container');
-        container.innerHTML = '<div class="loading">Error loading map: ' + (err.message || err) + '</div>';
-        console.error(err);
-      }
     })();
   </script>
 
 </body>
 </html>
-
-
